# code-challenges

./: README.md  aoctemplate.ipynb  ectemplate.ipynb  main.py  pyproject.toml
aoc2025/: d1.ipynb  d10.ipynb  d11.ipynb  d12.ipynb  d2.ipynb  d3.ipynb  d4.ipynb  d5.ipynb  d6.ipynb  d7.ipynb  d8.ipynb  d9.ipynb
ec2025/: q01.ipynb  q02.ipynb  q03.ipynb  q04.ipynb  q05.ipynb  q06.ipynb  q07.ipynb  q08.ipynb  q09-through-2.ipynb  q10-through-1.ipynb
